--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       <title>Aula de Bootstrap</title>
   </head>
   <body>
+    <!-- NAV -->
       <nav class="navbar navbar-expand-lg navbar-light bg-roxo">
         <div class="container">
           <a class="navbar-brand text-white" href="https://reprograma.com.br/" target="_blank">{Reprograma}</a>
@@ -30,6 +31,7 @@
           </div>
         </div>
         </nav>
+      <!--CAROUSEL  -->
       <header>
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
           <ol class="carousel-indicators">
@@ -58,8 +60,28 @@
           </a>
         </div>
       </header>
+    <!-- SOBRE -->
+      <section class="text-center my-4">
+        <h3>Sindi Raimundo da Silva</h3>
+        <h5 class="font-italic font-weight-light m-2">Desenvolvedora front-end</h5>
 
-      
+        <div class="d-flex flex-column flex-md-row justify-content-md-around redes sociais">
+          <a href="#" class="p-2 link-sobre" >
+            <i class="fa-2x fab fa-github mb 3"></i>
+            <span>https://github.com/sindiraimundo</span>
+          </a>
+          <a href="#" class="p-2 link-sobre">
+            <i class="fa-2x fab fa-linkedin icon mb 3"></i>
+            <span>https://www.linkedin.com/in/sindi-raimundo-da-silva-1890076b/</span>
+          </a>
+          <a href="#" class="p-2 link-sobre">
+            <i class="fa-2x fas fa-envelope-square mb 3"></i>
+            <span>sindiraimundo.s@gmail.com</span>
+          </a>
+        </div>
+
+      </section>
+
       <script src="./js/jquery-3.4.1.min.js"></script>
       <script src="./js/bootstrap.min.js"></script>
       <script src="https://kit.fontawesome.com/4fe8d55b33.js" crossorigin="anonymous"></script>
