--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
       <div class="collapse navbar-collapse justify-content-end" id="menudesktop">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link text-white" href="#">Habilidades</a>
+            <a class="nav-link text-white" href="#habilidades">Habilidades</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="#">Sobre</a>
+            <a class="nav-link text-white" href="#sobre">Sobre</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="#">Portifólios</a>
+            <a class="nav-link text-white" href="#portifolio">Portifólio</a>
           </li>
         </ul>
       </div>
@@ -43,8 +43,8 @@
         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
       </ol>
       <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img class="d-block w-100 imagem-carousel" src="assets/img/img.perfil.jpg" alt="Primeiro Slide">
+        <div class="carousel-item active  imagem-carousel">
+          <img class="d-block w-100" src="assets/img/img.perfil.jpg" alt="Primeiro Slide">
         </div>
         <div class="carousel-item">
           <img class="d-block w-100 imagem-carousel" src="assets/img/t9.jpg" alt="Segundo Slide">
@@ -85,7 +85,7 @@
   </section>
 
   <!-- SOBRE/HABILIDADES -->
-  <section class="bg-roxo text-white d-flex flex-column flex-lg-row justify-content-lg-around p-4">
+  <section class="bg-roxo text-white d-flex flex-column flex-lg-row justify-content-lg-around p-4" id="habilidades">
 
     <div class="habilidades w-100">
 
@@ -147,7 +147,7 @@
       </div>
     </div>
 
-    <div class="sobre text-center w-100">
+    <div class="sobre text-center w-100" id="sobre">
       <h2>Sobre</h2>
       <p class="pt-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur tempore laborum repellat saepe,
         voluptas
@@ -157,8 +157,127 @@
     </div>
 
   </section>
+  <!-- TITULO CARDS E MODAL -->
+  <section  class="text-center mt-5">
+    <h2 class="font-roxo">Portifólio</h2>
+  </section>>
 
+  <!-- CARDS E MODAL -->
+  <section class="row justify-content-around modal-cards" id="portifolio">
+   
+   <!--CARD 1 -->
+  <div class="card m-5 text-center" style="width: 18rem;">
+    <img src="assets/img/img_card1.png" class="card-img-top img-cards" alt="Foto projeto M de Maravilhosa">
+      <div class="card-body">
+        <h5 class="card-title text-center">M de Maravilhosa</h5>
+        <h5>Primeiro Projeto</h5>
+        <p>Criando página em HTML5 e CSS3</p>
+      </div>
+       <!-- Button trigger modal -->
+      <button type="button" class="m-5 btn bg-roxo text-white m-auto" data-toggle="modal" data-target="#modal1">
+       Veja mais
+      </button>
+  </div>
 
+  <!-- MODAL 1 -->
+<div class="modal fade" id="modal1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="modal1">M de Maravilhosa</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>Projeto de HTML5 e CSS3 criando uma página sobre uma personalidade e sobre a autora</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+        <a href="#" target="_blank" class="btn bg-roxo text-white">Ver página</a>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- CARD 2 -->
+<div class="card m-5 text-center" style="width: 18rem;">
+  <img src="assets/img/img_card3.png" class="card-img-top img-cards" alt="Foto projeto Lista de Tarefas (TodoList)">
+    <div class="card-body">
+      <h5 class="card-title text-center">Lista de Tarefas </h5>
+      <h5 class="card-title text-center">Segundo Projeto</h5>
+        <p class="card-text">Projeto de Lógica e JavaScript</p>
+    </div>
+     <!-- Button trigger modal -->
+    <button type="button" class="m-5 btn bg-roxo text-white m-auto" data-toggle="modal" data-target="#modal2">
+     Veja mais
+    </button>
+</div>
+
+<!-- MODAL 2 -->
+<div class="modal fade" id="modal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+<div class="modal-dialog" role="document">
+  <div class="modal-content">
+    <div class="modal-header">
+      <h5 class="modal-title" id="modal2">Projeto TodoList (Lista de Tarefas)</h5>
+      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-body">
+      <p>Projeto de Lógica e JavaScript, criamos uma lista de tarefas</p>
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-secondary" data-dismiss="modaL">Fechar</button>
+      <a href="#" target="_blank" class="btn bg-roxo text-white">Ver página</a>
+    </div>
+  </div>
+</div>
+</div>
+
+<!-- CARD 3 -->
+<div class="card m-5 text-center" style="width: 18rem;">
+  <img src="assets/img/img_card2.jpg" class="card-img-top img-cards" alt="Foto projeto Mundo Gelado">
+    <div class="card-body">
+      <h5 class="card-title text-center">Mundo Gelado</h5>
+      <h5>Projeto Extra</h5>
+      <p class="card-text">Projeto sobre responsividade</p>
+    </div>
+     <!-- Button trigger modal -->
+    <button type="button" class="m-5 btn bg-roxo text-white m-auto" data-toggle="modal" data-target="#modal3">
+     Veja mais
+    </button>
+</div>
+
+<!-- MODAL 3 -->
+<div class="modal fade" id="modal3" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+<div class="modal-dialog" role="document">
+  <div class="modal-content">
+    <div class="modal-header">
+      <h5 class="modal-title" id="modal3">Mundo Gelado</h5>
+      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-body">
+      <p>Projeto sobre responsividade</p>
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-secondary" data-dismiss="modaL">Fechar</button>
+      <a href="#" target="_blank" class="btn bg-roxo text-white">Ver página</a>
+    </div>
+  </div>
+</div>
+</div>
+
+</section>
+
+<!-- FOOTER -->
+
+<footer class="bg-roxo text-center text-white">
+ 
+ <p><i class="fas fa-code"></i> -Desenvolvido com Bootstrap por Sindi Raimundo da Silva, enquanto aluna da <span class="font-roxo">{Reprograma}</span> 2020.- <i class="fas fa-code"></i><p>
+ </footer>
   <script src="./js/jquery-3.4.1.min.js"></script>
   <script src="./js/bootstrap.min.js"></script>
   <script src="https://kit.fontawesome.com/4fe8d55b33.js" crossorigin="anonymous"></script>
