inserindo link m de maravilhosa

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
-        <a href="#" target="_blank" class="btn bg-roxo text-white">Ver página</a>
+        <a href="https://m-de-maravilhosas.netlify.app/index.html" target="_blank" class="btn bg-roxo text-white">Ver página</a>
       </div>
     </div>
   </div>
