adicionado link projeto lista de tarefas

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
     </div>
     <div class="modal-footer">
       <button type="button" class="btn btn-secondary" data-dismiss="modaL">Fechar</button>
-      <a href="#" target="_blank" class="btn bg-roxo text-white">Ver página</a>
+      <a href="https://projeto2listadetarefas.netlify.app/" target="_blank" class="btn bg-roxo text-white">Ver página</a>
     </div>
   </div>
 </div>
