Ajustes logo reprograma e img carousel

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./styles/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="./styles/style.css">
-  <title>Aula de Bootstrap</title>
+  <title>Portfólio</title>
 </head>
 
 <body>
   <!-- NAV -->
   <nav class="navbar navbar-expand-lg navbar-light bg-roxo">
     <div class="container">
-      <a class="navbar-brand text-white" href="https://reprograma.com.br/" target="_blank">{Reprograma}</a>
+      <a class="navbar-brand text-white" href="https://reprograma.com.br/" target="_blank"><span class="font-roxo">{Re </span>programa<span class="font-roxo">}</span></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menudesktop"
         aria-controls="menudesktop" aria-expanded="false" aria-label="Alterna navegação">
         <span class="navbar-toggler-icon"></span>
@@ -28,7 +28,7 @@
             <a class="nav-link text-white" href="#sobre">Sobre</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="#portifolio">Portifólio</a>
+            <a class="nav-link text-white" href="#portifolio">Portfólio</a>
           </li>
         </ul>
       </div>
@@ -44,13 +44,13 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active  imagem-carousel">
-          <img class="d-block w-100" src="assets/img/img.perfil.jpg" alt="Primeiro Slide">
+          <img class="d-block w-100 img-responsive imagem-carousel" src="assets/img/img.perfil.carousel.jpg" alt="Primeiro Slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100 imagem-carousel" src="assets/img/t9.jpg" alt="Segundo Slide">
+          <img class="d-block w-100 imagem-carousel " src="assets/img/img.t9.carousel.jpg" alt="Segundo Slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100 imagem-carousel" src="assets/img/img.turma.jpg" alt="Terceiro Slide">
+          <img class="d-block w-100 imagem-carousel" src="assets/img/img.turma.carousel.jpg" alt="Terceiro Slide">
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -159,7 +159,7 @@
   </section>
   <!-- TITULO CARDS E MODAL -->
   <section  class="text-center mt-5">
-    <h2 class="font-roxo">Portifólio</h2>
+    <h2 class="font-roxo">Portfólio</h2>
   </section>>
 
   <!-- CARDS E MODAL -->
@@ -167,7 +167,7 @@
    
    <!--CARD 1 -->
   <div class="card m-5 text-center" style="width: 18rem;">
-    <img src="assets/img/img_card1.png" class="card-img-top img-cards" alt="Foto projeto M de Maravilhosa">
+    <img src="assets/img/img cards/img_card1.png" class="card-img-top img-cards" alt="Foto projeto M de Maravilhosa">
       <div class="card-body">
         <h5 class="card-title text-center">M de Maravilhosa</h5>
         <h5>Primeiro Projeto</h5>
@@ -202,7 +202,7 @@
 
 <!-- CARD 2 -->
 <div class="card m-5 text-center" style="width: 18rem;">
-  <img src="assets/img/img_card3.png" class="card-img-top img-cards" alt="Foto projeto Lista de Tarefas (TodoList)">
+  <img src="assets/img/img cards/img_card2.png" class="card-img-top img-cards" alt="Foto projeto Lista de Tarefas (TodoList)">
     <div class="card-body">
       <h5 class="card-title text-center">Lista de Tarefas </h5>
       <h5 class="card-title text-center">Segundo Projeto</h5>
@@ -237,7 +237,7 @@
 
 <!-- CARD 3 -->
 <div class="card m-5 text-center" style="width: 18rem;">
-  <img src="assets/img/img_card2.jpg" class="card-img-top img-cards" alt="Foto projeto Mundo Gelado">
+  <img src="assets/img/img cards/img_card3.jpg" class="card-img-top img-cards" alt="Foto projeto Mundo Gelado">
     <div class="card-body">
       <h5 class="card-title text-center">Mundo Gelado</h5>
       <h5>Projeto Extra</h5>
@@ -276,7 +276,7 @@
 
 <footer class="bg-roxo text-center text-white">
  
- <p><i class="fas fa-code"></i> -Desenvolvido com Bootstrap por Sindi Raimundo da Silva, enquanto aluna da <span class="font-roxo">{Reprograma}</span> 2020.- <i class="fas fa-code"></i><p>
+ <p><i class="fas fa-code"></i> -Desenvolvido com Bootstrap por Sindi Raimundo da Silva, enquanto aluna da <span class="font-roxo">{Re </span>programa<span class="font-roxo">}</span> 2020.- <i class="fas fa-code"></i><p>
  </footer>
   <script src="./js/jquery-3.4.1.min.js"></script>
   <script src="./js/bootstrap.min.js"></script>
